src/App.css
body {
  margin: 0;
  background-color: #eaeaea;
  font-family: "Roboto", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: auto;
  font-size: 11pt;
}

h1, h3, h5 {
  margin: 0;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 10px;
}

.flex-three {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 5px;
  clear: both;
}

.inner {
  max-width: 1100px;
}

.nav {
  margin: 0 auto;
  background-color: #fe9814;
  color: #fff;
  text-align: right;
  position: fixed;
  width: 100%;
}

.nav > span {
  margin: 0;
  display: inline-block;
  padding: 10px;
}

.header-container {
  text-align: center;
  height: 200px;
  background-color: #fe9814;
  color: #fff;
  flex: 0 0 33.333333%;
}

.header {
  padding-top: 50px;
}

span, .fa-search, .close {
  cursor: pointer;
}

.close {
  cursor: pointer;
  margin: 20px;
}

.fa-search {
  font-size: 1.3em;
}

input {
  width: 100%;
  padding: 10px;
  margin: 20px 20px;
  max-width: 580px;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

figure {
  background-color: #fff;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  width: 280px;
  height: 300px;
  border-radius: 5px;
  text-align: center;
  margin: 10px;
  padding: 10px;
}

figure:hover {
  box-shadow: 0 15px 20px 0 rgba(0, 0, 0, 0.3);
  cursor: pointer;
}

figure>img {
  height: 180px;
  padding: 20px;
}

.favorite {
  position: relative;
}

figure>div>.fa-star, .fa-times-circle {
  display:block;
  position:absolute;
  top: 10px;
  right: 10px;
  color: #fe9814;
  font-size: 1.2em;
}

.card-title {
  color: #fe9814;
  margin: 0;
  padding-top: 20px;
}

.tagline {
  color: gray;
  margin: 5px auto 20px auto;
}

.background {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 999;
}

.window {
  position: relative;
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
  width: 520px;
  padding: 20px;
  overflow: auto;
}

.modal-img {
  height: 400px;
  float: left;
  padding: 20px 40px 20px 20px;
}

hr {
  border: solid #b7009e 3px;
  width: 100px;
  display: inline-block;
}

.numbers {
  padding-right: 10px;
}

.description {
  color: #5e5e5e;
}

.best-list {
  color: #5e5e5e;
}

.modal-card {
  border: solid gray 1px;
  width: 150px;
  height: 200px;
}

@media (max-width: 640px) {
  body {
    font-size: smaller;
  }

  input {
    width: 70%
  }

  figure {
    width: 100%;
  }

  .window {
    width: 80%;
  }

  .modal-img {
    height: 200px;
    padding: 20px;
  }
}

